--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,32 @@ body {
 body a {
   text-decoration: none;
 }
+body .button-primary {
+  height: 80px;
+  background-color: #ff52bf;
+  color: #ffff;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 40px;
+}
 
 nav {
-  margin-top: 78px;
+  margin-top: 8vh;
   width: 1297px;
   height: 40px;
   display: -webkit-box;
@@ -45,5 +68,77 @@ nav a {
   font-size: 16px;
   color: #ff52bf;
   border-radius: 20px;
-  padding: 10;
+  width: 136px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+}
+header section {
+  margin-top: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+header section h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 48px;
+  font-weight: bold;
+}
+header section p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 600px;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
+  line-height: 30px;
+}
+header section a {
+  margin: 5vh 0 11vh;
 }
