--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -5,10 +5,13 @@ $primary-light-red: hsl(0, 100%, 63%);
 $neutral-very-dark-cyan: hsl(192, 100%, 9%);
 $neutral-very-pale-blue: hsl(207, 100%, 98%);
 
-$font-family-primary: "Poppins", sans-serif;
-$font-family-secondary: "Open Sans", sans-serif;
+$font-family-primary: 'Poppins', sans-serif;
+$font-family-secondary: 'Open Sans', sans-serif;
 
 $font-size-regular: 16px;
+$font-size-large: 48px;
+$font-size-middle: 20px;
+
 body {
     margin: 0;
     background-color: #f2f2f2;
@@ -19,5 +22,21 @@ body {
 
     a {
         text-decoration: none;
+    }
+
+    .button-primary {
+        height: 80px;
+        background-color: $primary-pink;
+        color: #ffff;
+        font-family: $font-family-secondary;
+        font-size: $font-size-middle;
+        font-weight: bold;
+        box-sizing: border-box;
+        width: 400px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        border-radius: 40px;
     }
 }
