--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,5 +1,5 @@
 nav {
-    margin-top: 78px;
+    margin-top: 8vh;
     width: 1297px;
     height: 40px;
     display: flex;
@@ -17,6 +17,11 @@ nav {
         font-size: $font-size-regular;
         color: $primary-pink;
         border-radius: 20px;
-        padding: 10;
+        width: 136px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
     }
 }
