--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,4 @@
-@import "breakpoints";
-@import "globals";
-@import "nav";
+@import 'breakpoints';
+@import 'globals';
+@import 'nav';
+@import 'header';
