--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,10 +3,10 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
 
     section {
-        margin-top: 80vh;
+        margin-top: 30vh;
         display: flex;
         justify-content: center;
         align-items: center;
