--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,29 @@ body .bg-img {
   background-repeat: no-repeat;
   background-size: cover;
 }
+body .button-secondary {
+  height: 48px;
+  width: 160px;
+  background-color: #ff52bf;
+  color: #ffffff;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 5px;
+  font-weight: bold;
+}
 
 nav {
   margin-top: 8vh;
@@ -281,4 +304,171 @@ header section a {
 }
 .your-users-lines-bottom {
   background-image: url("../images/bg-section-bottom-desktop-2.svg");
+}
+
+.buildYourCommunity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 22vh 0;
+}
+.buildYourCommunity h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+}
+
+.footer-line-top {
+  background-image: url("../images/bg-footer-top-desktop.svg");
+}
+
+footer {
+  width: 100%;
+  background-color: #00252e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+footer .container-footer {
+  margin: 5vh 0;
+  width: 1200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+footer .container-footer__section-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+}
+footer .container-footer__section-left-logo {
+  width: 240px;
+  height: 38px;
+  color: white;
+}
+footer .container-footer__section-left-detail {
+  margin-top: 30px;
+  width: 340px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+}
+footer .container-footer__section-left-contact {
+  margin-top: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+footer .container-footer__section-left-contact div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+footer .container-footer__section-left-contact div img {
+  width: 24px;
+  height: 24px;
+  margin-right: 1vw;
+}
+footer .container-footer__section-left-contact div p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  color: white;
+}
+footer .container-footer__section-left-social-media {
+  margin-top: 82px;
+}
+footer .container-footer__section-left-social-media button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  margin-right: 24px;
+}
+footer .container-footer__section-left-social-media button i {
+  font-size: 32px;
+  color: #ffffff;
+}
+footer .container-footer__section-right {
+  width: 50%;
+}
+footer .container-footer__section-right-title {
+  color: #ffffff;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+}
+footer .container-footer__section-right-detail {
+  color: #ffffff;
+  width: 344px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+}
+footer .container-footer__section-right-mail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5vh 0;
+}
+footer .container-footer__section-right-mail input {
+  margin-right: 2vw;
+  height: 48px;
+  border: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  border-radius: 5px;
 }
