--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,12 @@ body .button-primary {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 40px;
+  -webkit-box-shadow: 0px 6px 13px rgba(0, 37, 46, 0.2231);
+          box-shadow: 0px 6px 13px rgba(0, 37, 46, 0.2231);
+}
+body .button-primary:hover,
+body .button-secondary:hover {
+  background-color: #ff8fd8;
 }
 body .bg-img {
   height: 30vh;
@@ -111,6 +117,11 @@ nav a {
           align-items: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-box-shadow: 0px 0px 9px rgba(255, 82, 191, 0.2188);
+          box-shadow: 0px 0px 9px rgba(255, 82, 191, 0.2188);
+}
+nav a:hover {
+  border: 1px solid #ff8fd8;
 }
 
 header {
