--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -43,6 +43,12 @@ body {
         align-content: center;
         align-items: center;
         border-radius: 40px;
+        box-shadow: 0px 6px 13px hsl(192, 100%, 9%, 22.31%);
+    }
+
+    .button-primary:hover,
+    .button-secondary:hover {
+        background-color: $primary-light-pink;
     }
 
     .bg-img {
