--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -12,7 +12,7 @@ nav {
     }
 
     a {
-        border: 1px solid hsl(322, 100%, 66%);
+        border: 1px solid $primary-pink;
         font-family: $font-family-secondary;
         font-size: $font-size-regular;
         color: $primary-pink;
@@ -23,5 +23,10 @@ nav {
         justify-content: center;
         align-items: center;
         box-sizing: border-box;
+        box-shadow: 0px 0px 9px hsl(322, 100%, 66%, 21.88%);
+    }
+
+    a:hover {
+        border: 1px solid $primary-light-pink;
     }
 }
