--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -66,6 +66,9 @@ body {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        @include media(mobile-only) {
+            height: 15vh;
+        }
     }
 
     .button-secondary {
