--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,11 @@ body .bg-img {
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media only screen and (max-width: 768px) {
+  body .bg-img {
+    height: 15vh;
+  }
+}
 body .button-secondary {
   height: 48px;
   width: 160px;
@@ -199,6 +204,8 @@ header section h1 {
 @media only screen and (max-width: 768px) {
   header section h1 {
     font-size: 24px;
+    text-align: center;
+    line-height: 36px;
   }
 }
 header section p {
@@ -230,10 +237,17 @@ header section p {
 header section a {
   margin: 5vh 0 11vh;
 }
+@media only screen and (max-width: 768px) {
+  header section a {
+    margin: 7vh 0 11vh;
+  }
+}
 
-.hero-img {
-  width: 296px;
-  height: 209px;
+@media only screen and (max-width: 768px) {
+  .hero-img {
+    width: 296px;
+    height: 209px;
+  }
 }
 
 .status {
@@ -257,6 +271,18 @@ header section a {
         -ms-flex-direction: column;
             flex-direction: column;
     width: auto;
+    height: 356px;
+    margin: 6vh 0;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .status-left img {
+    width: 35.56px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .status-right img {
+    width: 31.22px;
   }
 }
 .status__header {
@@ -315,6 +341,7 @@ header section a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 9vh 0;
 }
 .sectionItem__img img {
   height: 560px;
@@ -346,7 +373,7 @@ header section a {
 }
 @media only screen and (max-width: 768px) {
   .sectionItem__detail {
-    width: auto;
+    width: 320px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -369,6 +396,7 @@ header section a {
 }
 @media only screen and (max-width: 768px) {
   .sectionItem__detail p {
+    margin: 3vh 0;
     font-size: 14px;
     line-height: 21px;
     text-align: center;
@@ -618,6 +646,14 @@ footer .container-footer__section-right-mail {
       -ms-flex-align: center;
           align-items: center;
   margin: 5vh 0;
+}
+@media only screen and (max-width: 768px) {
+  footer .container-footer__section-right-mail {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 footer .container-footer__section-right-mail input {
   margin-right: 2vw;
